--- a/about me.html
+++ b/about me.html
@@ -1,17 +1,16 @@
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
+    <head>
+    <Link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="ABOUT me" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT ME</title>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EAGLE_XVI</title>
+    <body>
     <div class="HEADER">
-    <IMg src="55.png" alt="LOGO"></IMg>
+    <IMg src="1025.jpg" alt="LOGO"></IMg>
     <div class="INFO">
-    <H1>ABOUT ME</H1>
-    <h4>SOME INFORMATION ABOUT ME</h4>
+    <H1>Eagle_xvi</H1>
+    <h4>a beta site</h4>
     <div class="SCROLL-TEXT">
     <MArquee BEHAVIOR="SCROLL",DIRECTOIN="RIGHT">HELLO WELCOME TO MY SITE</MArquee>
     </div>
@@ -22,15 +21,15 @@
     <li><a href="">MY VIDEO</a>
     <li><a href="">CONNECT TO US</a>
     <li><a href="about me.html">ABOUT ME</a>
-    </li> </ul></div></div></div>
+    </li></ul></div></div></div>
     <div class="CONTENT">
     <div class="LOOK">
     <div class="CONTENT-TITLE">
-    <h3>some information </h3>
+    <h3>امیرالمومنین علی (ع)</h3>
     <div class="CONTENT-TEXT">
-    <img src="" alt="PICTURE">
+    <img src="1.jpg" alt="PICTURE">
     </div></div></div></div></div></div></div>
     <div class="FOOTER">
-    <MArquee behavior="SCROLL",directoin="RIGHT">THISE SITE MADE BY EAGLE_XVI </MArquee></div>
-</body>
-</html>
+    <MArquee behavior="SCROLL",directoin="RIGHT"> do you want one site? call to:09368846973 </MArquee></div>
+    </body>
+    </html>
