--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>EAGLE_XVI</title>
     <body>
     <div class="HEADER">
-    <IMg src="55.png" alt="LOGO"></IMg>
+    <IMg src="1025.jpg" alt="LOGO"></IMg>
     <div class="INFO">
-    <H1>daniyal site</H1>
-    <h4>one site for my job</h4>
+    <H1>Eagle_xvi</H1>
+    <h4>a beta site</h4>
     <div class="SCROLL-TEXT">
     <MArquee BEHAVIOR="SCROLL",DIRECTOIN="RIGHT">HELLO WELCOME TO MY SITE</MArquee>
     </div>
@@ -25,11 +25,11 @@
     <div class="CONTENT">
     <div class="LOOK">
     <div class="CONTENT-TITLE">
-    <h3>text </h3>
+    <h3>امیرالمومنین علی (ع)</h3>
     <div class="CONTENT-TEXT">
-    <img src="" alt="PICTURE">
+    <img src="1.jpg" alt="PICTURE">
     </div></div></div></div></div></div></div>
     <div class="FOOTER">
-    <MArquee behavior="SCROLL",directoin="RIGHT"> THISE SITE MADE BY EAGLE_XVI </MArquee></div>
+    <MArquee behavior="SCROLL",directoin="RIGHT"> do you want one site? call to:09368846973 </MArquee></div>
     </body>
     </html>
