--- a/about me.html
+++ b/about me.html
@@ -18,7 +18,7 @@
     <ul>
     <div class="account">
     <li><a href="index.html">HOME</a>
-    <li><a href="">MY VIDEO</a>
+    <li><a href="https://www.aparat.com/eagle_xvi/">MY VIDEO</a>
     <li><a href="">CONNECT TO US</a>
     <li><a href="about me.html">ABOUT ME</a>
     </li></ul></div></div></div>
@@ -30,6 +30,6 @@
     <img src="1.jpg" alt="PICTURE">
     </div></div></div></div></div></div></div>
     <div class="FOOTER">
-    <MArquee behavior="SCROLL",directoin="RIGHT"> do you want one site? call to:09368846973 </MArquee></div>
+    <MArquee behavior="SCROLL",directoin="RIGHT"> do you wanana a site? call to mr.dehghan:09368846973</MArquee></div>
     </body>
     </html>
