--- a/about me.html
+++ b/about me.html
@@ -12,7 +12,7 @@
     <H1>Eagle_xvi</H1>
     <h4>a beta site</h4>
     <div class="SCROLL-TEXT">
-    <MArquee BEHAVIOR="SCROLL",DIRECTOIN="RIGHT">HELLO WELCOME TO MY SITE</MArquee>
+    <MArquee BEHAVIOR="SCROLL",DIRECTOIN="left">HELLO WELCOME TO MY SITE</MArquee>
     </div>
     <div class="MENU">
     <ul>
@@ -27,7 +27,7 @@
     <div class="CONTENT-TITLE">
     <h3>امیرالمومنین علی (ع)</h3>
     <div class="CONTENT-TEXT">
-    <img src="1.jpg" alt="PICTURE">
+    <img src="" alt="PICTURE">
     </div></div></div></div></div></div></div>
     <div class="FOOTER">
     <MArquee behavior="SCROLL",directoin="RIGHT"> do you wanana a site? call to mr.dehghan:09368846973</MArquee></div>
