--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EAGLE_XVI</title>
     <body>
+        <script src="log.ts"></script>
     <div class="HEADER">
     <IMg src="55.png" alt="LOGO"></IMg>
     <div class="INFO">
     <H1>Eagle_xvi</H1>
     <h4> my first site</h4>
     <div class="SCROLL-TEXT">
-    <MArquee BEHAVIOR="SCROLL",DIRECTOIN="left">HELLO WELCOME TO MY SITE</MArquee>
+        <MArquee BEHAVIOR = "SCROLL" , DIRECTOIN = "left">
+            ***** HELLO WELCOME TO MY SITE ***** I CODED THIS SITE FOR TEST MY ABILITIES *****
+
+        </MArquee>
     </div>
     <div class="MENU">
     <ul>
@@ -25,11 +29,12 @@
     <div class="CONTENT">
     <div class="LOOK">
     <div class="CONTENT-TITLE">
-    <h3></h3>
+    <h3>first tuterial</h3>
     <div class="CONTENT-TEXT">
     <img src="" alt="PICTURE">
     </div></div></div></div></div></div></div>
     <div class="FOOTER">
-    <MArquee behavior="SCROLL",directoin="RIGHT"> do you wanana a site? call to mr.dehgan:09368846973 </MArquee></div>
+    <MArquee behavior="SCROLL",directoin="RIGHT"> do you wanana a new site? call to mr.dehgan:09368846973 </MArquee></div>
     </body>
     </html>
+    
