--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,12 +1,13 @@
     <html lang="en">
     <head>
+    <link rel ="securety" href="log.ts">
     <Link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EAGLE_XVI</title>
     <body>
-        <script src="log.ts"></script>
+        <script></script>
     <div class="HEADER">
     <IMg src="55.png" alt="LOGO"></IMg>
     <div class="INFO">
